--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Zwanzig AR Dokumentation"
+title: "Zwanzig/AR Dokumentation"
 remote_theme: pmarsceill/just-the-docs
 color_scheme: "light"
 search_enabled: false
